Fixed shifting book, button issues, footer max-width

--- a/header.css
+++ b/header.css
@@ -15,6 +15,7 @@ body{
 
 #logo{
 	margin-top: 30px;
+	margin-left: 425px;
 }
 
 #title{
@@ -67,7 +68,7 @@ input[type="text"]{
 	color: rgb(58, 58, 58);
 }
 
-button{
+#search-button{
 	box-sizing: border-box;
 	width: 40px;
 	height: 35px;
